# akipy

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  pypi-publish.yml
akipy/: __init__.py  _base.py  akinator.py  async_akinator.py  async_akipy.py  dicts.py  exceptions.py  flaresolverr.py  utils.py
akipy/async_akipy/: __init__.py  async_akinator.py
examples/: README.md  async_aki.py  async_context_manager.py  async_usage.py  basic_usage.py  context_manager_usage.py  nonasync-aki.py
tests/: __init__.py  conftest.py  test_akinator.py  test_async_akipy.py  test_dicts.py  test_exceptions.py  test_integration.py  test_utils.py
