[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "advnpzn", email = "adenosinetp10@protonmail.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "httpx>=0.28.1,<1.0.0",
    "ruff>=0.9.3",
]
name = "akipy"
version = "0.2.2"
description = "A Python library wrapper for Akinator"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Bug Tracker" = "https://github.com/advnpzn/akipy/issues"
repository = "https://github.com/advnpzn/akipy"
