[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "advnpzn", email = "adenosinetp10@protonmail.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.3",
]
name = "akipy"
version = "0.2.3"
description = "A Python library wrapper for Akinator"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Bug Tracker" = "https://github.com/advnpzn/akipy/issues"
repository = "https://github.com/advnpzn/akipy"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.35.0",
    "pytest-mock>=3.15.1",
]
